kubernetes/apps/cert-manager/cert-manager/networkpolicys/cert-manager/cert-manager-cert-manager-allow-eg-to-world.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: cert-manager-cert-manager-allow-eg-to-world
  namespace: cert-manager
spec:
  endpointSelector:
    matchLabels:
      app: cert-manager
  egress:
    - toEntities:
        - world
      toPorts:
        - ports:
            - protocol: TCP
              port: "443"
